--- a/data/conf/env.ini
+++ b/data/conf/env.ini
@@ -1,8 +1,8 @@
 [mysql]
-host = 177.8.0.11
+host = 127.0.0.1
 port = 3306
 user = root
-password = 123456abc
+password =
 dbname = slgdb
 charset = utf8
 ; 最大空闲连接数
@@ -19,9 +19,9 @@ port = 8088
 host =
 port = 8004
 need_secret = true
-slg_proxy = ws://177.8.0.16:8001
-chat_proxy = ws://177.8.0.12:8002
-login_proxy = ws://177.8.0.15:8003
+slg_proxy = ws://127.0.0.1:8001
+chat_proxy = ws://127.0.0.1:8002
+login_proxy = ws://127.0.0.1:8003
 
 [slgserver]
 host =
